==> hostvind/NRF24l01/bUp/Src/nrf24l01.c <==
#include "nrf24l01.h"

static void NRF_CS_SETPIN(nrf24l01_dev* dev)
{
    HAL_GPIO_WritePin(dev->NRF_CSN_GPIOx, dev->NRF_CSN_GPIO_PIN,
        GPIO_PIN_SET);
}

static void NRF_CS_RESETPIN(nrf24l01_dev* dev)
{
    HAL_GPIO_WritePin(dev->NRF_CSN_GPIOx, dev->NRF_CSN_GPIO_PIN, GPIO_PIN_RESET);
}

static void NRF_CE_SETPIN(nrf24l01_dev* dev)
{
    HAL_GPIO_WritePin(dev->NRF_CE_GPIOx, dev->NRF_CE_GPIO_PIN, GPIO_PIN_SET);
}

static void NRF_CE_RESETPIN(nrf24l01_dev* dev)
{
    HAL_GPIO_WritePin(dev->NRF_CE_GPIOx, dev->NRF_CE_GPIO_PIN, GPIO_PIN_RESET);
}

static NRF_RESULT NRF_SetupGPIO(nrf24l01_dev* dev)
{

    GPIO_InitTypeDef GPIO_InitStructure;

    // CE pin
    GPIO_InitStructure.Pin = dev->NRF_CE_GPIO_PIN;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_MEDIUM;
    GPIO_InitStructure.Pull = GPIO_NOPULL;

    HAL_GPIO_Init(dev->NRF_CE_GPIOx, &GPIO_InitStructure);
    // end CE pin

    // IRQ pin
    GPIO_InitStructure.Mode = GPIO_MODE_IT_FALLING;
    GPIO_InitStructure.Pull = GPIO_PULLUP;
    GPIO_InitStructure.Pin = dev->NRF_IRQ_GPIO_PIN;
    HAL_GPIO_Init(dev->NRF_IRQ_GPIOx, &GPIO_InitStructure);

    // CSN pin
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_MEDIUM;
    GPIO_InitStructure.Pin = dev->NRF_CSN_GPIO_PIN;

    HAL_GPIO_Init(dev->NRF_CSN_GPIOx, &GPIO_InitStructure);
    /* Enable and set EXTI Line Interrupt to the given priority */
    HAL_NVIC_SetPriority(dev->NRF_IRQn, dev->NRF_IRQ_preempt_priority,
        dev->NRF_IRQ_sub_priority);
    HAL_NVIC_EnableIRQ(dev->NRF_IRQn);
    // end IRQ pin

    NRF_CS_RESETPIN(dev);
    NRF_CE_RESETPIN(dev);
    HAL_Delay(20);

    return NRF_OK;
}

uint32_t NRF_Init(nrf24l01_dev* dev)
{
    uint8_t config = 0;
    uint8_t i=0;
    uint32_t res=0;
    if (NRF_SetupGPIO(dev) != NRF_OK) res+=1;

    if (NRF_PowerUp(dev, 1) != NRF_OK) res+=1; 
    //HAL_Delay(100);   //not helping
    while ((config & 2) == 0) { // wait for powerup
        NRF_ReadRegister(dev, NRF_CONFIG, &config);
    }
/*Hostvind says:
    It took long to discover that TX and RX_pipe0 addresses of PTx must be the 
    same, if we count on receiving ACK packets. As well as targetted PRx pipe.
    For example:
    nrf1.TX = nrf1.RX0 = nrf2.RX0
    and we don't care about nrf2.TX address
    */  
    if (NRF_SetRXPayloadWidth_P0(dev, dev->PayloadLength) != NRF_OK) res+=1;
    if (NRF_SetRXAddress_P0(dev, dev->RX_ADDRESS) != NRF_OK) res+=1;
    if (NRF_SetTXAddress(dev, dev->TX_ADDRESS) != NRF_OK) res+=1;
    if (NRF_EnableRXDataReadyIRQ(dev, 1) != NRF_OK) res+=1;
    if (NRF_EnableTXDataSentIRQ(dev, 1) != NRF_OK) res+=1;
    if (NRF_EnableMaxRetransmitIRQ(dev, 1) != NRF_OK) res+=1;
    if (NRF_EnableCRC(dev, 1) != NRF_OK) res+=1;
    if (NRF_SetCRCWidth(dev, dev->CRC_WIDTH) != NRF_OK) res+=1;
    if (NRF_SetAddressWidth(dev, dev->ADDR_WIDTH) != NRF_OK) res+=1;
    if (NRF_SetRFChannel(dev, dev->RF_CHANNEL) != NRF_OK) res+=1;
    if (NRF_SetDataRate(dev, dev->DATA_RATE) != NRF_OK) res+=1;
    if (NRF_SetRetransmittionCount(dev, dev->RetransmitCount) != NRF_OK) res+=1;
    if (NRF_SetRetransmittionDelay(dev, dev->RetransmitDelay) != NRF_OK) res+=1;

    if (NRF_EnableRXPipe(dev, 0) != NRF_OK) res+=1;
    if (NRF_EnableAutoAcknowledgement(dev, 1) != NRF_OK) res+=1;

    if (NRF_ClearInterrupts(dev) != NRF_OK) res+=1;

    if (NRF_RXTXControl(dev, NRF_STATE_RX) != NRF_OK) res+=1;

    if (NRF_FlushRX(dev) != NRF_OK) res+=1;

    return res;
}

NRF_RESULT NRF_SendCommand(nrf24l01_dev* dev, uint8_t cmd, uint8_t* tx, uint8_t* rx,
    uint8_t len)
{
    uint8_t myTX[len + 1];
    uint8_t myRX[len + 1];
    myTX[0] = cmd;

    int i = 0;
    for (i = 0; i < len; i++) {
        myTX[1 + i] = tx[i];
        myRX[i] = 0;
    }
HAL_StatusTypeDef res;
    NRF_CS_RESETPIN(dev);
    res = HAL_SPI_TransmitReceive(dev->spi, myTX, myRX, 1 + len, NRF_SPI_TIMEOUT);
    if (res        != HAL_OK) {
        HAL_Delay (10);
        HAL_Delay (10);
        HAL_Delay (10);
        HAL_Delay (10);
        return NRF_ERROR;
    }

    for (i = 0; i < len; i++) {
        rx[i] = myRX[1 + i];
    }

    NRF_CS_SETPIN(dev);

    return NRF_OK;
}

void NRF_IRQ_Handler(nrf24l01_dev* dev)
{
    uint8_t status = 0;
    if (NRF_ReadRegister(dev, NRF_STATUS, &status) != NRF_OK) { 
        return;
    }

    if ((status & (1 << 6))) { // RX FIFO Interrupt
        uint8_t fifo_status = 0;
        NRF_CE_RESETPIN(dev);
        NRF_WriteRegister(dev, NRF_STATUS, &status);
        NRF_ReadRegister(dev, NRF_FIFO_STATUS, &fifo_status);
        if (dev->BUSY_FLAG == 1 && (fifo_status & 1) == 0) {
            NRF_ReadRXPayload(dev, dev->RX_BUFFER);
            status |= 1 << 6;
            NRF_WriteRegister(dev, NRF_STATUS, &status);
            //NRF_FlushRX(dev);
            dev->BUSY_FLAG = 0;
        }
        NRF_CE_SETPIN(dev);
    }
    if ((status & (1 << 5))) { // TX Data Sent Interrupt
        status |= 1 << 5; // clear the interrupt flag
        NRF_CE_RESETPIN(dev);
        NRF_RXTXControl(dev, NRF_STATE_RX);
        dev->STATE = NRF_STATE_RX;
        NRF_CE_SETPIN(dev);
        NRF_WriteRegister(dev, NRF_STATUS, &status);
        dev->BUSY_FLAG = 0;
/*DEBUG LINE*/  HAL_GPIO_WritePin(GPIOA, GPIO_PIN_15, GPIO_PIN_SET);
        
    }
    if ((status & (1 << 4))) { // MaxRetransmits reached
        status |= 1 << 4;

        NRF_FlushTX(dev);
        //this looks BAD BAD BAD
        //NRF_PowerUp(dev, 0); // power down
        //NRF_PowerUp(dev, 1); // power up
/*DEBUG LINE*/  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_4, GPIO_PIN_SET); 

        NRF_CE_RESETPIN(dev);
        NRF_RXTXControl(dev, NRF_STATE_RX);
        dev->STATE = NRF_STATE_RX;
        NRF_CE_SETPIN(dev);
        
        NRF_WriteRegister(dev, NRF_STATUS, &status);
        dev->BUSY_FLAG = 0;
/*DEBUG LINE*/  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, GPIO_PIN_SET);
    }
}
