==> kiryam/warm_floor/firmware/warm_floor_logic/src/drivers/nRF24L01.c <==
#include "string.h"
#include "platform.h"
#include "stdio.h"
#include "main.h"
#include "bus_spi.h"
#include "nRF24L01.h"

static void NRF_CS_SETPIN(nrf24l01_dev* dev) {
	GPIO_WriteBit(dev->NRF_CSN_GPIOx, dev->NRF_CSN_PIN, Bit_SET);
}

static void NRF_CS_RESETPIN(nrf24l01_dev* dev) {
	GPIO_WriteBit(dev->NRF_CSN_GPIOx, dev->NRF_CSN_PIN, Bit_RESET);
}

static void NRF_CE_SETPIN(nrf24l01_dev* dev) {
	GPIO_WriteBit(dev->NRF_CE_GPIOx, dev->NRF_CE_PIN, Bit_SET);
}

static void NRF_CE_RESETPIN(nrf24l01_dev* dev) {
	GPIO_WriteBit(dev->NRF_CE_GPIOx, dev->NRF_CE_PIN, Bit_RESET);
}

void NRF_SetupGPIO(nrf24l01_dev* dev) {
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_StructInit(&GPIO_InitStructure);
	GPIO_InitStructure.GPIO_Pin = dev->NRF_SCK_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(dev->NRF_SCK_GPIOx, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = dev->NRF_MOSI_PIN;
	GPIO_Init(dev->NRF_MOSI_GPIOx, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = dev->NRF_MISO_PIN;
	GPIO_Init(dev->NRF_MISO_GPIOx, &GPIO_InitStructure);

	GPIO_InitTypeDef GPIO_InitStructure2;
	GPIO_StructInit(&GPIO_InitStructure2);
	GPIO_InitStructure2.GPIO_Pin = dev->NRF_CSN_PIN;
	GPIO_InitStructure2.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_Init(dev->NRF_CSN_GPIOx, &GPIO_InitStructure2);

	GPIO_InitStructure2.GPIO_Pin =  dev->NRF_CE_PIN;
	GPIO_Init(dev->NRF_CE_GPIOx, &GPIO_InitStructure2);

	SPI_StructInit(&dev->spi->Init);
	dev->spi->Init.SPI_Mode = SPI_Mode_Master;
	dev->spi->Init.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	dev->spi->Init.SPI_DataSize = SPI_DataSize_8b;
	dev->spi->Init.SPI_CPOL = SPI_CPOL_Low;
	dev->spi->Init.SPI_CPHA = SPI_CPHA_1Edge;
	dev->spi->Init.SPI_NSS = SPI_NSS_Soft;
	dev->spi->Init.SPI_BaudRatePrescaler = dev->SPI_BaudRatePrescaler;
	dev->spi->Init.SPI_FirstBit = SPI_FirstBit_MSB;
	dev->spi->Init.SPI_CRCPolynomial = 7;

	dev->spi->ErrorCode = HAL_SPI_ERROR_NONE;
	dev->spi->State     = HAL_SPI_STATE_READY;
	dev->spi->Lock      = HAL_UNLOCKED;

	SPI_Init(dev->spi->Instance, &dev->spi->Init);
	SPI_CalculateCRC(dev->spi->Instance, DISABLE);
	SPI_Cmd(dev->spi->Instance, ENABLE);

	NRF_CE_SETPIN(dev);
	NRF_CS_SETPIN(dev);
}

nrf24l01_dev* NRF1_Init(uint8_t* addr_master,uint8_t* addr_slave, NRF_ADDR_WIDTH add_width, NRF_CRC_WIDTH crc_width, NRF_DATA_RATE data_rate, uint8_t rf_channel, uint8_t retransmit_count, uint8_t retransmit_delay, NRF_TX_PWR tx_power, callback on_event) {
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);


	NRF24L01_1.RX_BUFFER = RX_BUFFER1;
	NRF24L01_1.on_event = on_event;

	NRF24L01_1.NRF_CE_GPIOx  = GPIOB;
	NRF24L01_1.NRF_CE_PIN = GPIO_Pin_0;

	NRF24L01_1.NRF_CSN_GPIOx = GPIOB;
	NRF24L01_1.NRF_CSN_PIN = GPIO_Pin_1;

	NRF24L01_1.NRF_SCK_GPIOx = GPIOA;
	NRF24L01_1.NRF_SCK_PIN = GPIO_Pin_5;

	NRF24L01_1.NRF_MOSI_GPIOx = GPIOA;
	NRF24L01_1.NRF_MOSI_PIN = GPIO_Pin_7;

	NRF24L01_1.NRF_MISO_GPIOx = GPIOA;
	NRF24L01_1.NRF_MISO_PIN = GPIO_Pin_6;

	NRF24L01_1.NRF_IRQ_GPIOx = GPIOB;
	NRF24L01_1.NRF_IRQ_PIN = GPIO_Pin_2;

	NRF24L01_1.spi = &nrf24_spi1;
	NRF24L01_1.spi->Instance = SPI1;
	NRF24L01_1.ADDR_WIDTH = add_width;
	NRF24L01_1.CRC_WIDTH = crc_width;
	NRF24L01_1.DATA_RATE = data_rate;
	NRF24L01_1.RF_CHANNEL = rf_channel;

	NRF24L01_1.MASTER_ADDRESS = addr_master;
	NRF24L01_1.SLAVE_ADDRESS = addr_slave;

	NRF24L01_1.RetransmitCount = retransmit_count;
	NRF24L01_1.RetransmitDelay = retransmit_delay;
	NRF24L01_1.TX_POWER = tx_power;
	NRF24L01_1.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_64;

	NRF_SetupGPIO(&NRF24L01_1);

	GPIO_InitTypeDef GPIO_InitStructure3;
	GPIO_StructInit(&GPIO_InitStructure3);
	GPIO_InitStructure3.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_InitStructure3.GPIO_Pin = NRF24L01_1.NRF_IRQ_PIN;
	GPIO_InitStructure3.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(NRF24L01_1.NRF_IRQ_GPIOx, &GPIO_InitStructure3);


	EXTI_InitTypeDef EXTI_InitStruct;
	GPIO_EXTILineConfig(GPIO_PortSourceGPIOB, GPIO_PinSource2);
	EXTI_InitStruct.EXTI_Line = EXTI_Line2;
	EXTI_InitStruct.EXTI_LineCmd = ENABLE;
	EXTI_InitStruct.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Falling;
	EXTI_Init(&EXTI_InitStruct);


	NVIC_InitTypeDef NVIC_InitStruct;
	NVIC_InitStruct.NVIC_IRQChannel = EXTI2_IRQn;
	NVIC_InitStruct.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStruct.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStruct.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStruct);

	NVIC_SetPriority(EXTI2_IRQn, 5);

	delay_nms(100);

	NRF_PowerUp(&NRF24L01_1, 1);

	NRF_SetTXPower(&NRF24L01_1, NRF24L01_1.TX_POWER);
	NRF_SetRXPayloadWidth_P1(&NRF24L01_1, NRF_PAYLOAD_LENGTH);
	NRF_SetRXAddress_P1(&NRF24L01_1, NRF24L01_1.SLAVE_ADDRESS);
	NRF_SetTXAddress(&NRF24L01_1, NRF24L01_1.MASTER_ADDRESS);
	NRF_EnableRXDataReadyIRQ(&NRF24L01_1, 1);
	NRF_EnableTXDataSentIRQ(&NRF24L01_1, 1);
	NRF_EnableMaxRetransmitIRQ(&NRF24L01_1, 1);
	NRF_EnableCRC(&NRF24L01_1, 1);
	NRF_SetCRCWidth(&NRF24L01_1, NRF24L01_1.CRC_WIDTH);
	NRF_SetAddressWidth(&NRF24L01_1, NRF24L01_1.ADDR_WIDTH);
	NRF_SetRFChannel(&NRF24L01_1, NRF24L01_1.RF_CHANNEL);
	NRF_SetDataRate(&NRF24L01_1, NRF24L01_1.DATA_RATE);
	NRF_SetRetransmittionCount(&NRF24L01_1, NRF24L01_1.RetransmitCount);
	NRF_SetRetransmittionDelay(&NRF24L01_1, NRF24L01_1.RetransmitDelay);
	//NRF_EnableRXPipe(&NRF24L01_1, 0);
	NRF_EnableRXPipe(&NRF24L01_1, 1);
	NRF_EnableAutoAcknowledgement(&NRF24L01_1, 1);

	NRF_ClearInterrupts(&NRF24L01_1);

	NRF_RXTXControl(&NRF24L01_1, NRF_STATE_RX);
	NRF_FlushRX(&NRF24L01_1);

	return &NRF24L01_1;
}

NRF_RESULT NRF_SendCommand(nrf24l01_dev* dev, uint8_t cmd, uint8_t* tx, uint8_t* rx, uint8_t len) {
	uint8_t myTX[len + 1];
	uint8_t myRX[len + 1];
	int i;

	memset(myTX, 0, len+1);
	memset(myRX, 0, len+1);

	myTX[0] = cmd;

	for (i = 0; i < len; i++) {
		myTX[i+1] = tx[i];
	}

	NRF_CS_RESETPIN(dev);
	delay_nus(20);
	if (SPI_TransmitReceive(dev->spi, myTX, myRX, 1 + len, NRF_SPI_TIMEOUT) != HAL_OK) {
		return NRF_ERROR;
	}

	for (i = 0; i < len; i++) {
		rx[i] = myRX[1 + i];
	}

	NRF_CS_SETPIN(dev);

	return NRF_OK;
}

void NRF_IRQ_Handler(nrf24l01_dev* dev) {
	delay_nus(10);
	uint8_t status = 0;
	if (NRF_ReadRegister(dev, NRF_STATUS, &status) != NRF_OK) {
		return;
	}

	if ((status & (1 << 6))) {	// RX FIFO Interrupt
		uint8_t fifo_status = 0;
		NRF_CE_RESETPIN(dev);
		NRF_WriteRegister(dev, NRF_STATUS, &status);
		NRF_ReadRegister(dev, NRF_FIFO_STATUS, &fifo_status);


		if ( (fifo_status & 1) == 0) {
			NRF_ReadRXPayload(dev, dev->RX_BUFFER);
			dev->on_event(dev);
			status |= 1 << 6;
			NRF_WriteRegister(dev, NRF_STATUS, &status);
			NRF_FlushRX(dev);
		}
		NRF_CE_SETPIN(dev);
	}

	if ((status & (1 << 5))) {	// TX Data Sent Interrupt
		status |= 1 << 5;	// clear the interrupt flag
		NRF_CE_RESETPIN(dev);
		NRF_RXTXControl(dev, NRF_STATE_RX);
		dev->STATE = NRF_STATE_RX;
		NRF_CE_SETPIN(dev);
		NRF_WriteRegister(dev, NRF_STATUS, &status);
		dev->BUSY_FLAG=0;
	}
	if ((status & (1 << 4))) {	// MaxRetransmits reached
		//core.stats.tx_failed++;
		//LED_On(&core.led3);
		//delay_nms(50);
		// TODO
		status |= 1 << 4;

		NRF_FlushTX(dev);
		//NRF_PowerUp(dev,0);	// power down
		//NRF_PowerUp(dev,1);	// power up

		NRF_CE_RESETPIN(dev);
		NRF_RXTXControl(dev, NRF_STATE_RX);
		dev->STATE = NRF_STATE_RX;
		NRF_CE_SETPIN(dev);

		NRF_WriteRegister(dev, NRF_STATUS, &status);
		dev->BUSY_FLAG=0;
		//LED_Off(&core.led3);

	}
}
